--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -85,6 +85,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start
   }
   
   .hero-form {
@@ -110,7 +111,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
   }
 
   .hero-cta h2 {
@@ -157,7 +158,7 @@ section {
   }
 
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     display: inline-block;
     padding-bottom: 20px;
@@ -342,4 +343,13 @@ section {
 .flex-row {
   display: flex;
 }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER SCREENS */
+@media screen and (max-width: 980px) {
+  header h1 a {
+    /* this will be applied on any screen smaller than 980px */
+    color: tomato;
+  }  
+}
+
  
